# blp-bridge

./: CMakeLists.txt  README.md  ReleseNotes.txt  SConstruct  tick42blp.sln
OpenMama-2.1.1.2-patches/: Tick42.20120905.patch  tick42.20120820.patch
OpenMama-2.2.2.1-patches/: queue.patch
cmake/: FindBlpAPI.cmake  FindOpenMAMA.cmake  FindUuid.cmake
tick42blp/: BlpSubscription.cpp  CMakeLists.txt  SConscript  SConscript.win  UpdateLibs.cmd  UpdateLibs64.cmd  UpdateLibsRelease.cmd  UpdateLibsRelease64.cmd  bbdict.txt  blpbridgefunctions.h  blpbridgeimpl.h  blpbridgesubscription.cpp  blpdefs.h  blpdictionaryutils.cpp  blpdictionaryutils.h  blpenvironment.cpp  blpenvironment.h  blpfilesystem.cpp  blpfilesystem.h  blpitem.cpp  blpitem.h  blpresponseeventhandler.cpp  blpresponseeventhandler.h  blpservice.cpp  blpservice.h  blpsession.cpp  blpsession.h  blpsubscription.h  blpsubscriptioneventhandler.cpp  blpsubscriptioneventhandler.h  blpsystemglobal.cpp  blpsystemglobal.h  blpthreadutil.cpp  blpthreadutil.h  blptimeutils.cpp  blptimeutils.h  blputils.cpp  blputils.h  bridge.cpp  common.h  (+17 more)
tick42blpmsg/: CMakeLists.txt  SConscript  SConscript.win  blpfieldpayload.h  blpmsgimpl.cpp  blpmsgimpl.h  blpmsgutils.cpp  blpmsgutils.h  blppayload.h  blppayloadimpl.cpp  blppayloadimpl.h  blpvaluetype.h  tick42blpmsg.vcxproj  tick42blpmsg.vcxproj.filters
